# Multi-Agent-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  data  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: README.md
docs/plans/: 2026-05-03-full-fix-design.md  2026-05-03-full-fix-plan.md
eval/: README.md  __init__.py  evaluator.py  run_eval
eval/datasets/: routing_eval.csv
sandbox/: Dockerfile.sandbox
scripts/: ingest.py
src/: config.py  main.py  observ
src/a2a/: agent_cards.py  client.py  executor.py  server.py
src/agents/: base.py  code_agent.py  critic_agent.py  retrieval_agent.py  search_agent.py  writer_agent.py
src/graph/: callbacks.py  distributed_workflow.py  state.py  supervisor.py  workflow.py
src/llm/: prompts.py  providers.py
src/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/tools/: code_executor.py  mcp_adapter.py  rag.py  search.py
src/ui/: streamlit_app.py
tests/: conftest.py
tests/integration/: test_a2a.py  test_workflow.py
tests/unit/: test_a2a_client.py  test_code_executor.py  test_critic_agent.py  test_distributed_workflow.py  test_hitl.py  test_interactive_cli.py  test_llm_providers  test_llm_providers.py  test_routing.py  test_search.py  test_supervisor.py  test_workflow_build.py  test_writer_agent.py
