[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Production-ready Multi-Agent Research Assistant with LangGraph and A2A protocol"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-tavily>=0.1",
    "a2a-sdk[http-server]>=0.3",
    "streamlit>=1.40",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[project.scripts]
research-assistant = "src.main:main"
