[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Production-ready Multi-Agent Research Assistant with LangGraph and A2A protocol"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<3",
    "langgraph-checkpoint-postgres>=2.0,<4",
    "langchain-core>=0.3,<1",
    "langchain-anthropic>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-google-genai>=2.0,<3",
    "langchain-tavily>=0.1,<1",
    "a2a-sdk[http-server]>=0.3,<1",
    "streamlit>=1.40,<2",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "coverage>=7.5",
]
rag = [
    "chromadb>=0.5,<1",
    "tiktoken>=0.7,<1",
]

[project.scripts]
research-assistant = "src.main:main"


[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "logs", "eval/results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function-call-in-default-argument (common in FastAPI/decorators)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F841", "B007"]
"src/observability/metrics.py" = ["B023"]
"src/ui/**" = ["E741", "F821", "B007"]

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]